Updated Error handling in MYSQL insert, and in case of error insert logic in the MYSQL database Err column in change_log to avoid entering loop of trying to process data

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ DB_PORT=5432
 SERVER_PORT=5858
 AUTH_SERVER_PORT=8990
 FILES_SERVER_PORT=5859
-CLIENT_URL='http://localhost'
-# CLIENT_URL=http://134.16.66.61 
+# CLIENT_URL='http://localhost'
+CLIENT_URL=http://134.16.66.61 
 # CLIENT_URL=http://172.20.10.5
 CLIENT_PORT=3000
 ENV=Dev
