--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^17.0.25",
     "@types/node-fetch": "^2.6.1",
     "@types/pg": "^8.6.5",
+    "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.16",
     "jasmine": "^5.1.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -70,6 +71,7 @@
     "node-fetch": "^3.3.0",
     "os": "^0.1.2",
     "pg": "^8.8.0",
+    "pino": "^8.19.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "start": "^5.1.0"
