--- a/.env
+++ b/.env
@@ -1,16 +1,25 @@
+########### DATABASE ############
 POSTGRES_HOST=127.0.0.1
 POSTGRES_DB=reportingassistdb
 TEST_DB=reportingassistdb_test
 POSTGRES_USER=kdkibtops
 POSTGRES_PASSWORD=254307830
 DB_PORT=5432
-SERVER_PORT=5858
-AUTH_SERVER_PORT=8990
-FILES_SERVER_PORT=5859
-# CLIENT_URL='https://localhost'
-CLIENT_URL=http://134.16.66.61 
-# CLIENT_URL=http://172.20.10.5
+########### PORTS ############
+AUTHORIZATION_PORT=8990
+MAIN_PORT=5858
+########### HTTPS PORTS ############
+HTTPS_MAIN_PORT=443
+HTTPS_AUTHORIZATION_PORT=442
+########### CLIENT URL LOCAL HOST ############
+CLIENT_URL='http://localhost'
+HTTPS_CLIENT_URL='https://localhost'
+########### CLIENT URL NETWORK HOST ############
+# CLIENT_URL=http://134.16.66.61
+# HTTPS_CLIENT_URL=https://134.16.66.61
+########### CLIENT URL NETWORK HOST ############
 CLIENT_PORT=3000
+FILES_SERVER_PORT=5859
 ENV=Dev
 PEPPER='dnui32e&&D*@#()e3-___934u3248h9newf98**#(@**ED())(394290*&#@^#$RF15591r34r&^^%@#^&((*012ed003473^#&*#(*'
 SALT_ROUNDS=10
