--- a/package.json
+++ b/package.json
@@ -1,88 +1,91 @@
 {
-  "name": "radassist-backend",
-  "version": "1.0.0",
-  "description": "Backend for Radiology Assistant",
-  "main": "./dist/server.js",
-  "scripts": {
-    "test": "tsc&&db-migrate db:drop shopping_test&& set ENV=test&& db-migrate db:create shopping_test&& db-migrate --env test up && jasmine &&db-migrate db:drop shopping_test",
-    "testTrial": "npx tsc && jasmine",
-    "start": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/server.js\"",
-    "start_": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/models_db/importDataToExcel.js\"",
-    "startDICOM": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/DICOM/DICOMServer.js\"",
-    "res": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/foreverMoniter.js\"",
-    "startAuth": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/authorizationServer.js\"",
-    "build": "npx tsc",
-    "run": "node ./dist/server.js",
-    "create-dev-db": "db-migrate db:create reportingassistdb_test --env dbmigrateconnect && db-migrate up --env Dev",
-    "create-production-db": "db-migrate db:create reportingassistdb --env dbmigrateconnect && db-migrate up --env Production",
-    "drop-dev-db": "db-migrate db:drop reportingassistdb_test --env dbmigrateconnect",
-    "drop-production-db": "db-migrate db:drop reportingassistdb && db-migrate db:drop reportingassistdb",
-    "migrateup-sqliteDB": "db-migrate up:sqliteDB --env SQ",
-    "migratedown-sqliteDB": "db-migrate down:sqliteDB --env SQ",
-    "build-dbs": "npm run migrateup-sqliteDB && db-migrate up",
-    "unbuild-dbs": "npm run migratedown-sqliteDB && db-migrate down"
-  },
-  "author": "Mustafa Heidar",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/forever-monitor": "^1.7.6",
-    "@types/formidable": "^2.0.5",
-    "@types/http-proxy-middleware": "^1.0.0",
-    "@types/jasmine": "^5.1.2",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/mime": "^3.0.1",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.25",
-    "@types/node-fetch": "^2.6.1",
-    "@types/pg": "^8.6.5",
-    "@types/pino": "^7.0.5",
-    "@types/supertest": "^2.0.16",
-    "jasmine": "^5.1.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.7.0",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "@types/sqlite3": "^3.1.11",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.1",
-    "concurrently": "^7.6.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "db-migrate-pg": "^1.2.2",
-    "dicom-dimse-native": "^2.4.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "forever-monitor": "^1.5.2",
-    "formidable": "^2.1.1",
-    "http-proxy-middleware": "^2.0.6",
-    "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "mime": "^3.0.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.0",
-    "os": "^0.1.2",
-    "pg": "^8.8.0",
-    "pino": "^8.19.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.6",
-    "start": "^5.1.0"
-  },
-  "pkg": {
-    "scripts": "dist/**/*.js",
-    "assets": [
-      ".env"
-    ],
-    "target": "node14-win",
-    "outputPath": "dist"
-  },
-  "bin": "./dist/server.js"
+	"name": "radassist-backend",
+	"version": "1.0.0",
+	"description": "Backend for Radiology Assistant",
+	"main": "./dist/server.js",
+	"scripts": {
+		"test": "tsc&&db-migrate db:drop shopping_test&& set ENV=test&& db-migrate db:create shopping_test&& db-migrate --env test up && jasmine &&db-migrate db:drop shopping_test",
+		"testTrial": "npx tsc && jasmine",
+		"start": "tsc-watch -p ./tsconfig.json --onSuccess  \"node ./dist/server.js\" ",
+		"start_": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/models_db/importDataToExcel.js\"",
+		"startDICOM": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/DICOM/DICOMServer.js\"",
+		"res": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/foreverMoniter.js\"",
+		"startAuth": "tsc-watch -p ./tsconfig.json --onSuccess \"node ./dist/authorizationServer.js\"",
+		"build": "npx tsc",
+		"run": "node ./dist/server.js",
+		"create-dev-db": "db-migrate db:create reportingassistdb_test --env dbmigrateconnect && db-migrate up --env Dev",
+		"create-production-db": "db-migrate db:create reportingassistdb --env dbmigrateconnect && db-migrate up --env Production",
+		"drop-dev-db": "db-migrate db:drop reportingassistdb_test --env dbmigrateconnect",
+		"drop-production-db": "db-migrate db:drop reportingassistdb && db-migrate db:drop reportingassistdb",
+		"migrateup-sqliteDB": "db-migrate up:sqliteDB --env SQ",
+		"migratedown-sqliteDB": "db-migrate down:sqliteDB --env SQ",
+		"build-dbs": "npm run migrateup-sqliteDB && db-migrate up",
+		"unbuild-dbs": "npm run migratedown-sqliteDB && db-migrate down"
+	},
+	"author": "Mustafa Heidar",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/body-parser": "^1.19.2",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.12",
+		"@types/dotenv": "^8.2.0",
+		"@types/express": "^4.17.13",
+		"@types/forever-monitor": "^1.7.6",
+		"@types/formidable": "^2.0.5",
+		"@types/http-proxy-middleware": "^1.0.0",
+		"@types/jasmine": "^5.1.2",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mime": "^3.0.1",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^17.0.25",
+		"@types/node-fetch": "^2.6.1",
+		"@types/pg": "^8.6.5",
+		"@types/pino": "^7.0.5",
+		"@types/supertest": "^2.0.16",
+		"jasmine": "^5.1.0",
+		"jasmine-spec-reporter": "^7.0.0",
+		"supertest": "^6.3.3",
+		"ts-node": "^10.7.0",
+		"tsc-watch": "^5.0.3",
+		"typescript": "^4.6.3"
+	},
+	"dependencies": {
+		"@types/sqlite3": "^3.1.11",
+		"bcrypt": "^5.0.1",
+		"body-parser": "^1.20.1",
+		"concurrently": "^7.6.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"db-migrate-pg": "^1.2.2",
+		"dicom-dimse-native": "^2.4.2",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"forever-monitor": "^1.5.2",
+		"formidable": "^2.1.1",
+		"http-proxy-middleware": "^2.0.6",
+		"https": "^1.0.0",
+		"jsonwebtoken": "^9.0.0",
+		"mime": "^3.0.0",
+		"multer": "^1.4.5-lts.1",
+		"node-fetch": "^2.6.6",
+		"os": "^0.1.2",
+		"pg": "^8.11.3",
+		"pg-hstore": "^2.3.4",
+		"pino": "^8.19.0",
+		"sequelize": "^6.37.1",
+		"sequelize-auto": "^0.8.8",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.6",
+		"start": "^5.1.0"
+	},
+	"pkg": {
+		"scripts": "dist/**/*.js",
+		"assets": [
+			".env"
+		],
+		"target": "node14-win",
+		"outputPath": "dist"
+	},
+	"bin": "./dist/server.js"
 }
