--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"author": "Mustafa Heidar",
 	"license": "ISC",
 	"devDependencies": {
+		"@prisma/client": "^5.11.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/body-parser": "^1.19.2",
 		"@types/cookie-parser": "^1.4.3",
@@ -73,6 +74,7 @@
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
 		"pino": "^8.19.0",
+		"prisma": "^5.11.0",
 		"sequelize": "^6.37.1",
 		"sequelize-auto": "^0.8.8",
 		"sqlite": "^5.1.1",
