finished database and corresponding prisma models

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TEST_DB=reportingassistdb_test
 POSTGRES_USER=kdkibtops
 POSTGRES_PASSWORD=254307830
 DB_PORT=5432
-PRISMA_DB_URL=postgresql://kdkibtops:254307830@localhost:5432/reportingassistdb_test
+DATABASE_URL="postgresql://kdkibtops:254307830@localhost:5432/reportingassistdb_test"
 ########### PORTS ############
 AUTHORIZATION_PORT=8990
 MAIN_PORT=5858
@@ -27,11 +27,4 @@ SALT_ROUNDS=10
 TOKEN_SECRET="dnui32e&&D*@#()e3-___934u32de23d2))()()_9d-d0ewde9ewdew0ud09dD-080D8-0-EDWFDEWIF-0I-EWF#@^#$RF15591r34r&^^%@#^&((*012esddsadasdsadsadwdwd2e23e32ed2ddd003473^#&*#(*(*R#*RUDFFNDNfuvhjbYUEUFEYUF"
 REFRESH_TOKEN_SECRET="dnui32e&&D*@#()e3-IUND*(DDBNNU9*)_D__**#(@**ED())(394290*&#@^#$RF15591r34r&^^%@#^&((*012ed003473^#&*#(*(*R#*RUDFFNDNfuvhjbYUEUFEYUF"
 
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
