--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "resolveJsonModule": true,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
   "exclude": [ "node_modules", "dist" ],
 }
